# Py_web_HW_05

./: .gitignore  README.md  main.py  main_different_session copy.py  main_different_session.py  main_one_session.py  pyproject.toml  server_websockets.py  test.py
exchange/: exchange.py
exchange/template/: index.html  main.js
web_chat/: index.html  main.js  server.py
